--- a/AnatomyClass.html
+++ b/AnatomyClass.html
@@ -1,1 +1,111 @@
-
+<html>
+  <head>
+    <title> Anatomy Coursework </title>
+  </head>
+  <body>
+    <h1> Torso </h1><br>
+    <h2> Thorax </h2><br>
+    <h2> Abdomen </h2><br>
+    <h2> Pelvis </h2><br>
+    <h2> Peritoneum </h2> <br>
+    <h1>Back and Limbs</h1></br>
+    <h2> Back </h2><br>
+    <h2> Upper Limb </h2> <br>
+    <h2>Lower Limb<h2><br>
+       A 32 yo M presents s/p MVA with a laceration on the medial right knee complaining of numbness along the medial right leg and foot, no motor deficit. Which nerve was injured?
+      <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Femoral</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Saphenous</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Sural</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Superficial fibular</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Deep fibular</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The saphenous nerve, which travels with the great saphenous vein, runs along the medial leg and thigh to provide cutaneous innervation. The femoral nerve innervates the anterior thigh, the sural nerve runs up the lateral leg with the lesser saphenous vein to innervate the posterior lower leg and lateral foot. The superficial fibular nerve innervates the anterior leg muscle and the skin between the 1st and 2nd toes- lesions would lead to foot drop.</p><br>
+      Catheterization and cannularization involves incision of the skin at the ankle to access the saphenous vein at the:
+       <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. anterior to the lateral epicondyle</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. posterior to the medial epicondyle</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. anterior to the medial malleolus</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. posterior to the lateral malleolus</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. over the base of the fifth metatarsal</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The great saphenous vein is anterior to the medial malleolus and posterior to the medial condyle of the femur. THe lesser saphenous vein is posterior to the lateral malleolus.</p>
+      A 15yo M presents with an enlarged superficial inguinal lymph node, likely related to his infected skin wound in the:
+       <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. anterior abdominal wall above the umbilicus </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. anterior chest wall</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. skin of the lower limb</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. upper back</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The superficial inguinal lymph nodes drain the skin of the lower limb, the anal canal below the pectinate line, the external genitalia, and the lower abdominal wall. The anterior chest wall and skin of the upper back.</p>
+      A patient presents with a diabetic ulcer in the anterior midline of the ankle region experienced loss of cutaneous sensation on the dorsal foot, likely due to damage from:
+       <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Femoral</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Lateral sural cutaneous</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Saphenous</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Superficial fibular</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Sural</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white">The fibular nerve branches into the superficial fibular nerve, which runs anteriorly to the ankle and innervates the lower anterior leg and dorsum of the foot, and the lateral sural cutaneous nerve, which innervates the lateral leg. The femoral nerve innervates the quadriceps femoris, sartorius, and pectineus and gives off the anterior femoral cutaneous branch to the medial and anterior thigh skin, and the saphenous nerve, which innervates the skin of the medial leg and foot. The sural nerve on the posterior leg adjacent to the lesser saphenous vein innervates the skin of the posterior lower leg and lateral foot. </p>
+      A construction worker who wears a heavy work belt all day complains of tingling on the anterolateral thigh, likely due to:
+       <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. compartment syndrome</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. cryptorchidism</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. hydrocele</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. meralgia parasthetica</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. thrombophlebitis</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> Meralgia paresthetica is a palsy of the lateral cutaneous nerve of the thigh, resulting in tingling and itching on the lateral thigh. Constriction of nerves, blood vessels, or tendons results in compartment syndrome, presenting as numbness, tingling, pain, or loss of movement in the extremity. Cryptorchidism is the term for undescended testes. Hydrocele is the presence of fluid in a patent processus vaginalis. Thrombophlebitis is the inflammation around a vein following a thrombus.</p>
+      A cashier develops painful and tortuous varicose veins in her lower legs due to prolonged standing, leading to failure of the valves of the:
+       <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. deep femoral vein</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. great saphenous vein</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. lesser saphenous vein</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. perforating vein</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. popliteal vein</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The perforating veins shunt blood from the superficial to deep veins and are the first to suffer valve failures due to prolonged standing; the blood subsequently backs up in the superficial veins. The larger veins do not visibly varicose.</p>
+    <h1>Head and Neck</h1> </br>
